Được tạo bằng Colab

--- a/Buoi1.ipynb
+++ b/Buoi1.ipynb
@@ -42,7 +42,7 @@
         "# code\n",
         "\n",
         "def average(a, b, c, d, e):\n",
-        "  ...\n"
+        "    return (a + b + c + d + e) / 5"
       ]
     },
     {
@@ -95,7 +95,13 @@
         "import math\n",
         "\n",
         "def area(a, b, c):\n",
-        "  ..."
+        "    # Kiểm tra điều kiện tam giác hợp lệ\n",
+        "    if a + b <= c or a + c <= b or b + c <= a:\n",
+        "        raise ValueError(\"Ba cạnh không tạo thành tam giác hợp lệ\")\n",
+        "\n",
+        "    p = (a + b + c) / 2\n",
+        "    s = math.sqrt(p * (p - a) * (p - b) * (p - c))\n",
+        "    return s"
       ]
     },
     {
